--- a/assets/styles/section/_for-whom.scss
+++ b/assets/styles/section/_for-whom.scss
@@ -36,7 +36,7 @@
             &__column {
                 display: none;
                 &__title, &__description {
-                    padding: 0 1.4rem 0 1.4rem;
+                    padding: 0 10% 0 12%;
                 }
                 // &__description {
                 //     padding: 3rem;
